cmake_minimum_required(VERSION 3.23)
project(AcceleratedCPlusPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(helloworld chapter00/helloworld.cpp)
add_executable(0-2 chapter00/exercises/0-2.cpp)
add_executable(0-3 chapter00/exercises/0-3.cpp)
add_executable(0-5 chapter00/exercises/0-5.cpp)
add_executable(0-6 chapter00/exercises/0-6.cpp)
add_executable(0-7 chapter00/exercises/0-7.cpp)
add_executable(0-8 chapter00/exercises/0-8.cpp)
add_executable(0-9 chapter00/exercises/0-9.cpp)
add_executable(0-10 chapter00/exercises/0-10.cpp)
add_executable(greet chapter01/greet.cpp)
add_executable(frame chapter01/frame.cpp)
add_executable(1-1 chapter01/exercises/1-1.cpp)
add_executable(1-2 chapter01/exercises/1-2.cpp)
add_executable(1-3 chapter01/exercises/1-3.cpp)
add_executable(1-4 chapter01/exercises/1-4.cpp)
add_executable(1-5 chapter01/exercises/1-5.cpp)
add_executable(1-6 chapter01/exercises/1-6.cpp)
add_executable(frame2 chapter02/frame.cpp)
add_executable(2-1 chapter02/exercises/2-1.cpp)
add_executable(2-2 chapter02/exercises/2-2.cpp)
add_executable(2-3 chapter02/exercises/2-3.cpp)
add_executable(2-4 chapter02/exercises/2-4.cpp)
add_executable(2-5 chapter02/exercises/2-5.cpp)
add_executable(2-6 chapter02/exercises/2-6.cpp)
add_executable(2-7 chapter02/exercises/2-7.cpp)
add_executable(2-8 chapter02/exercises/2-8.cpp)
add_executable(2-9 chapter02/exercises/2-9.cpp)
add_executable(2-10 chapter02/exercises/2-10.cpp)
add_executable(avg chapter03/avg.cpp)