cmake_minimum_required(VERSION 3.23)
project(AcceleratedCPlusPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(0-helloworld chapter00/helloworld.cpp)
add_executable(0-2 chapter00/exercises/0-2.cpp)
add_executable(0-3 chapter00/exercises/0-3.cpp)
add_executable(0-5 chapter00/exercises/0-5.cpp)
add_executable(0-6 chapter00/exercises/0-6.cpp)
add_executable(0-7 chapter00/exercises/0-7.cpp)
add_executable(0-8 chapter00/exercises/0-8.cpp)
add_executable(0-9 chapter00/exercises/0-9.cpp)
add_executable(0-10 chapter00/exercises/0-10.cpp)
add_executable(1-greet chapter01/greet.cpp)
add_executable(1-frame chapter01/frame.cpp)
add_executable(1-1 chapter01/exercises/1-1.cpp)
add_executable(1-2 chapter01/exercises/1-2.cpp)
add_executable(1-3 chapter01/exercises/1-3.cpp)
add_executable(1-4 chapter01/exercises/1-4.cpp)
add_executable(1-5 chapter01/exercises/1-5.cpp)
add_executable(1-6 chapter01/exercises/1-6.cpp)
add_executable(2-frame2 chapter02/frame.cpp)
add_executable(2-1 chapter02/exercises/2-1.cpp)
add_executable(2-2 chapter02/exercises/2-2.cpp)
add_executable(2-3 chapter02/exercises/2-3.cpp)
add_executable(2-4 chapter02/exercises/2-4.cpp)
add_executable(2-5 chapter02/exercises/2-5.cpp)
add_executable(2-6 chapter02/exercises/2-6.cpp)
add_executable(2-7 chapter02/exercises/2-7.cpp)
add_executable(2-8 chapter02/exercises/2-8.cpp)
add_executable(2-9 chapter02/exercises/2-9.cpp)
add_executable(2-10 chapter02/exercises/2-10.cpp)
add_executable(3-avg chapter03/avg.cpp)
add_executable(3-med chapter03/med.cpp)
add_executable(3-2 chapter03/exercises/3-2.cpp)
add_executable(3-3 chapter03/exercises/3-3.cpp)
add_executable(3-4 chapter03/exercises/3-4.cpp)
add_executable(3-5 chapter03/exercises/3-5.cpp)
add_executable(3-6 chapter03/exercises/3-6.cpp)
add_executable(4-main chapter04/main.cpp)
add_executable(4-main2 chapter04/main2.cpp)
add_executable(4-main3 chapter04/main3.cpp chapter04/Student_info.cpp chapter04/grade.cpp chapter04/median.cpp)
add_executable(4-details chapter04/details.cpp)
add_executable(4-1 chapter04/exercises/4-1.cpp chapter04/Student_info.cpp)
add_executable(4-2 chapter04/exercises/4-2.cpp)
add_executable(4-3 chapter04/exercises/4-3.cpp)
add_executable(4-4 chapter04/exercises/4-4.cpp)
add_executable(4-5 chapter04/exercises/4-5.cpp)
add_executable(4-6 chapter04/exercises/4-6.cpp)
add_executable(4-7 chapter04/exercises/4-7.cpp)
add_executable(5-11 chapter05/exercises/5-11.cpp)
add_executable(copyVec chapter06/copyVec.cpp)
add_executable(palindromes chapter06/palindromes.cpp)
add_executable(findURLs chapter06/findURLs.cpp)
add_executable(grade_analysis chapter06/grade_analysis.cpp chapter04/Student_info.cpp chapter04/median.cpp
        chapter06/grade.cpp chapter06/analysis.cpp chapter06/grade_check.cpp)
add_executable(6-3 chapter06/exercises/6-3.cpp)
add_executable(6-4 chapter06/exercises/6-4.cpp)
add_executable(6-9 chapter06/exercises/6-9.cpp)
